serve static files from nginx, proxy pass websocket connections to tornado server

--- a/web_code/index.html
+++ b/web_code/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Match A Professor</title>
-	<link rel=stylesheet type=text/css href="{{ static_url('index.css') }}">
-	<link rel=stylesheet type=text/css href="{{ static_url('button.css') }}">
+	<link rel=stylesheet type=text/css href="/static/index.css">
+	<link rel=stylesheet type=text/css href="/static/button.css">
 </head>
 <body>
     <h2>Match a Prof</h2>
@@ -34,8 +34,8 @@
         <p>Built by Nathan Shelly and Sasha Weiss, for EECS 352 @ Northwestern.</p>
         <p><a href="https://docs.google.com/presentation/d/1xWapGB6mQnUaBJ-nfJyglCsV5nFxxiZ-G2ivald6820/edit?usp=sharing">About</a> | <a href="https://github.com/nathanshelly/professor_matching">Source</a>
     </div>
-    <script src="{{ static_url('recorder.js') }}"></script>
-    <script src="{{ static_url('index.js') }}"></script>
+    <script src="/static/recorder.js"></script>
+    <script src="/static/index.js"></script>
 <pre id="log"></pre>
 </body>
 </html>
