changed wording and pickle used for classification

--- a/web_code/index.html
+++ b/web_code/index.html
@@ -23,7 +23,7 @@
         <ul id="recordings_list"></ul>
         <p class='results_text'>Let's see how you match up with professors!</p>
         <h3 id='prediction'></h3>
-        <p class='results_text'>Below are your 5 closest matches, a lower negative number means a closer match</p>
+        <p class='results_text'>Below are your 5 closest matches, a smaller negative number means a closer match</p>
     </div>
     <div id='results'>
         <ul id="predictions_list"></ul>
